app6/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seedimage-dep
spec:
  replicas: 6
  selector:
    matchLabels:
      app: seedimage
  template:
    metadata:
      labels:
        app: seedimage
    spec:
      containers:
        - name: seedimage
          image: jakousa/dwk-app6:e11a700350aede132b62d3b5fd63c05d6b976394
